<resources>
    <string name="app_name">TrueSMS</string>
    <string name="title_search">Nhập tìm</string>
    <string name="nameSearch">Tên, SDT:</string>
    <string name="bodySearch">Nội dung: </string>
    <string name="ringtone_defaultvalue">content://settings/system/notification_sound</string>
    <string name="listReference_theme_light">light</string>
    <string name="about_" formatted="false">Thông tin</string>
    <string name="about_hint" formatted="false">Giới thiệu về ứng dụng</string>
    <string name="faq_hint" formatted="false">Một số mẹo và thủ thuật, cách thiết lập ứng dụng này.</string>
    <string name="feedback_" formatted="false">Phản hồi</string>
    <string name="feedback_hint" formatted="false">Báo cáo lỗi, yêu cầu tính năng ...</string>
    <string name="settings" formatted="false">Cài đặt</string>
    <string name="new_message_" formatted="false">Tin nhắn mới</string>
    <string name="new_message" formatted="false">1 tin nhắn chưa đọc.</string>
    <string name="new_messages_" formatted="false">Các tin nhắn mới</string>
    <string name="new_messages" formatted="false">%d tin nhắn chưa đọc.</string>
    <string name="title_conversation_list" formatted="false">Hộp thư</string>
    <string name="filterd" formatted="false">Đã lọc tin nhắn rác</string>
    <string name="content_filterd" formatted="false">Nội dung</string>
    <string name="content_block" formatted="false">SDT</string>
    <string name="title_Conv_Filterd" formatted="false">Hộp thư Lọc</string>
    <string name="title_Filterd" formatted="false">Lọc</string>
    <string name="title_Conv_Backlist" formatted="false">Hộp thư Chặn</string>
    <string name="title_Backlist" formatted="false">Chặn</string>
    <string name="block" formatted="false">Đã chặn tin nhắn rác</string>
    <string name="call" formatted="false">Gọi</string>
    <string name="reply" formatted="false">Trả lời</string>
    <string name="send_" formatted="false">Gửi</string>
    <string name="notification_" formatted="false">Thông báo</string>
    <string name="notification_enable_" formatted="false">Bật thông báo</string>
    <string name="notification_enable_hint" formatted="false">Bật thông báo khi nhận</string>
    <string name="receive_vibrate_" formatted="false">Rung</string>
    <string name="receive_vibrate_hint" formatted="false">Rung khi nhận</string>
    <string name="receive_vibrate_mode_" formatted="false">Chế độ rung</string>
    <string name="receive_sound_" formatted="false">Âm thanh</string>
    <string name="receive_sound_hint" formatted="false">Âm thanh khi nhận</string>
    <string name="receive_led_color_" formatted="false">Màu LED</string>
    <string name="receive_led_flash_" formatted="false">Chế độ LED</string>
    <string name="receive_led_flash_hint" formatted="false">Đặt nháy Led</string>
    <string name="receive_no_text_" formatted="false">Ẩn người gửi / văn bản</string>
    <string name="receive_no_text_hint" formatted="false">Ẩn người gửi / văn bản trong thông báo.</string>
    <string name="behavior_" formatted="false">Chung</string>
    <string name="appearance_and_behavior_" formatted="false">Hiện thị &amp; Chung</string>
    <string name="appearance_" formatted="false">Hiển thị</string>
    <string name="theme_" formatted="false">Giao diện</string>
    <string name="textsize_" formatted="false">Kích cỡ chữ</string>
    <string name="textsize_hint" formatted="false">Kích thước chữ bằng pixel; Để trống để mặc định.</string>
    <string name="textcolor_" formatted="false">Màu chữ</string>
    <string name="textcolor_hint" formatted="false">Màu văn bản.</string>
    <string name="textcolor_ignore_conv_" formatted="false">Bỏ qua màu văn bản cho cuộc hội thoại.</string>
    <string name="textcolor_ignore_conv_hint" formatted="false">Bỏ qua màu văn bản trong danh sách các cuộc hội thoại.</string>
    <string name="show_contact_photo_" formatted="false">Hiển thị ảnh</string>
    <string name="show_contact_photo_hint" formatted="false">Hiển thị ảnh của người liên hệ trong danh sách cuộc trò chuyện.</string>
    <string name="show_emoticons_" formatted="false">Hiển thị biểu tượng cảm xúc</string>
    <string name="show_emoticons_hint" formatted="false">Hiển thị biểu tượng cảm xúc trong tin nhắn.</string>
    <string name="hide_restore_" formatted="false">Ẩn nút "khôi phục lại tin nhắn cuối cùng"</string>
    <string name="hide_restore_hint" formatted="false">Ẩn nút "khôi phục lại tin nhắn cuối cùng" trong danh sách tin nhắn.</string>
    <string name="hide_widget_label_" formatted="false">Ẩn nhãn của tiện ích con</string>
    <string name="hide_widget_label_hint" formatted="false">Ẩn nhãn của widget.</string>
    <string name="hide_delete_all_threads_" formatted="false">Ẩn xóa tất cả tin nhắn</string>
    <string name="hide_delete_all_threads_hint" formatted="false">Ẩn xóa tất cả tin nhắn trong cuộc hội thoại.</string>
    <string name="hide_message_count_" formatted="false">Ẩn số tin nhắn</string>
    <string name="hide_message_count_hint" formatted="false">Ẩn số lượng thư trên danh sách cuộc hội thoại.</string>
    <string name="show_full_date_" formatted="false">Hiển thị ngày đầy đủ</string>
    <string name="show_full_date_hint" formatted="false">Hiển thị ngày và giờ đầy đủ trên mỗi tin nhắn.</string>
    <string name="me" formatted="false">Tôi</string>
    <string name="view_contact_" formatted="false">Xem danh bạ</string>
    <string name="add_contact_" formatted="false">Thêm vào danh bạ</string>
    <string name="view_thread_" formatted="false">Xem tin nhắn</string>
    <string name="mark_block_" formatted="false">Chặn số điện thoại</string>
    <string name="filter_spam_" formatted="false">Đánh dấu Spam</string>
    <string name="dont_filter_spam_" formatted="false">Xoá khỏi Danh sách đen</string>
    <string name="delete_message_" formatted="false">Xóa tin nhắn</string>
    <string name="delete_thread_" formatted="false">Xóa cuộc hội thoại</string>
    <string name="forward_" formatted="false">Chuyển tiếp</string>
    <string name="send_draft_" formatted="false">Gửi nháp</string>
    <string name="copy_text_" formatted="false">Sao chép tin nhắn</string>
    <string name="view_details_" formatted="false">Xem chi tiết tin nhắn</string>
    <string name="delete_threads_" formatted="false">Xóa tất cả tin nhắn</string>
    <string name="mark_read_" formatted="false">Đánh dấu đọc</string>
    <string name="mark_unread_" formatted="false">Đánh dấu chưa đọc</string>
    <string name="message_options_" formatted="false">Tùy chọn tin nhắn</string>
    <string name="delete_message_question" formatted="false">Bạn có thực sự muốn xóa tin nhắn này?</string>
    <string name="delete_thread_question" formatted="false">Bạn có thực sự muốn xóa <b>tất cả thư trong cuộc hội thoại này</b>?</string>
    <string name="delete_threads_question" formatted="false">Bạn có thực sự muốn xóa <b>tất cả thư</b>?</string>
    <string name="from_" formatted="false">Từ:</string>
    <string name="to_" formatted="false">Đến:</string>
    <string name="to_hint" formatted="false">Tên và số điện thoại</string>
    <string name="type_" formatted="false">Kiểu:</string>
    <string name="sent_" formatted="false">Gởi:</string>
    <string name="received_" formatted="false">Đã nhận:</string>
    <string name="view_mms" formatted="false">Xem MMS</string>
    <string name="mms_conversation" formatted="false">&lt; Nội dung MMS &gt;</string>
    <string name="import_contact_" formatted="false">Nhập liên hệ</string>
    <string name="download_" formatted="false">Tải về</string>
    <string name="downloading_" formatted="false">Đang tải về..</string>
    <string name="error_conv_null" formatted="false">Lỗi nhận cuộc trò chuyện từ DB!</string>
    <string name="error_sending_failed" formatted="false">Gửi tin nhắn thất bại</string>
    <string name="sending_successfully" formatted="false">Gửi tin nhắn thành công</string>
    <string name="text_hint" formatted="false">Text</string>
    <string name="restore_" formatted="false">Khôi phục tin nhắn cuối cùng</string>
    <string name="attachment_saved" formatted="false">Đã lưu tệp đính kèm trên thẻ SD dưới dạng:</string>
    <string name="attachment_not_saved" formatted="false">Không thể lưu tệp đính kèm.</string>
    <string name="notification_icon_" formatted="false">Biểu tượng thông báo</string>
    <string name="notification_default_" formatted="false">Ảnh mặc định</string>
    <string name="notification_red_" formatted="false">Red (đỏ)</string>
    <string name="notification_black_" formatted="false">Black (đen)</string>
    <string name="notification_green_" formatted="false">Green (Xanh lá)</string>
    <string name="notification_yellow_" formatted="false">Yellow (Vàng</string>
    <string name="notification_blue_" formatted="false">Blue (Xanh da trời)</string>
    <string name="bubbles_in_" formatted="false">Bong bóng nhận</string>
    <string name="bubbles_in_hint" formatted="false">Bong bóng cho các thư đến</string>
    <string name="bubbles_out_" formatted="false">Bong bóng gửi</string>
    <string name="bubbles_out_hint" formatted="false">Bong bóng cho thư đi</string>
    <string name="bubbles_nothing" formatted="false">Tắt bong bóng </string>
    <string name="bubbles_plain_dark_gray" formatted="false">Màu xám đậm</string>
    <string name="bubbles_plain_light_gray" formatted="false">Màu xám nhạt</string>
    <string name="bubbles_old_turquoise_left" formatted="false">Màu ngọc lam tối trái</string>
    <string name="bubbles_old_turquoise_right" formatted="false">Màu ngọc lam tối phải</string>
    <string name="bubbles_old_green_left" formatted="false">xanh lá tối trái</string>
    <string name="bubbles_old_green_right" formatted="false">Xanh lá tốiphải</string>
    <string name="bubbles_blue_left" formatted="false">Xanh dương trái</string>
    <string name="bubbles_blue_right" formatted="false">Xanh dương phải</string>
    <string name="bubbles_blue2_left" formatted="false">Xanh dương 2 trái</string>
    <string name="bubbles_blue2_right" formatted="false">Xanh dương 2 phải</string>
    <string name="bubbles_brown_left" formatted="false">Nâu trái</string>
    <string name="bubbles_brown_right" formatted="false">Nâu phải</string>
    <string name="bubbles_gray_left" formatted="false">Xám trái</string>
    <string name="bubbles_gray_right" formatted="false">Xám phải</string>
    <string name="bubbles_green_left" formatted="false">Xanh lá trái</string>
    <string name="decode_decimal_ncr_" formatted="false">Giải mã Decimal NCR</string>
    <string name="decode_decimal_ncr_hint" formatted="false">Một số nhà cung cấp cung cấp tin nhắn unicode được mã hoá bằng chữ số thập phân NCR (&amp;#0000;). Chọn để tự động giải mã các thực thể như vậy.</string>
    <string name="show_target_app_" formatted="false">Hiển thị ứng dụng</string>
    <string name="show_target_app_hint" formatted="false">Hiển thị Ứng dụng được sử dụng để gửi.</string>
    <string name="mobile_only_" formatted="false">Chỉ số điện thoại di động</string>
    <string name="mobile_only_hint" formatted="false">Chỉ đề xuất số điện thoại di động cho người nhận</string>
    <string name="forwarded_sms_clean_" formatted="false">Chuyển tiếp</string>
    <string name="forwarded_sms_clean_hint" formatted="false">Dải người gửi trong nhận sms theo "([0-9a-zA-Z] +):" và sử dụng số này làm người gửi.</string>
    <string name="search" formatted="false">Tìm kiếm</string>
    <string name="receive_popup_">Popup</string>
    <string name="receive_popup_hint">Bật tắt Popup.</string>
    <string name="charr">Ký tự</string>
    <string name="word">Từ</string>
    <string name="pharse">Cụm từ</string>
    <string name="add_filter">Thêm mẫu lọc</string>
    <string name="add_charr">Thêm ký tự</string>
    <string name="add_word">Thêm từ</string>
    <string name="add_pharse">Thêm cụm từ</string>
    <string name="delete_all_filter">Xóa tất cả mẫu lọc</string>
</resources>