<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/listReference_theme_light"
        android:entries="@array/themes"
        android:entryValues="@array/themes_values"
        android:key="theme"
        android:title="@string/theme_" />
    <PreferenceScreen
            android:key="bubbles_in"
            android:summary="@string/bubbles_in_hint"
            android:title="@string/bubbles_in_"/>
    <PreferenceScreen
            android:key="bubbles_out"
            android:summary="@string/bubbles_out_hint"
            android:title="@string/bubbles_out_"/>

    <EditTextPreference
            android:inputType="number"
            android:key="textsizen"
            android:summary="@string/textsize_hint"
            android:title="@string/textsize_"/>

    <PreferenceScreen
            android:key="textcolor"
            android:summary="@string/textcolor_hint"
            android:title="@string/textcolor_"/>

    <CheckBoxPreference
            android:key="text_color_ignore_conv"
            android:summary="@string/textcolor_ignore_conv_hint"
            android:title="@string/textcolor_ignore_conv_"/>
    <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_contact_photo"
            android:summary="@string/show_contact_photo_hint"
            android:title="@string/show_contact_photo_"/>
    <CheckBoxPreference
            android:key="show_emoticons"
            android:summary="@string/show_emoticons_hint"
            android:title="@string/show_emoticons_"/>
    <CheckBoxPreference
            android:key="show_full_date"
            android:summary="@string/show_full_date_hint"
            android:title="@string/show_full_date_"/>
    <CheckBoxPreference
            android:key="hide_restore"
            android:summary="@string/hide_restore_hint"
            android:title="@string/hide_restore_"/>
    <CheckBoxPreference
            android:key="hide_widget_label"
            android:summary="@string/hide_widget_label_hint"
            android:title="@string/hide_widget_label_"/>
    <CheckBoxPreference
            android:key="hide_delete_all_threads"
            android:summary="@string/hide_delete_all_threads_hint"
            android:title="@string/hide_delete_all_threads_"/>
    <CheckBoxPreference
            android:key="hide_message_count"
            android:summary="@string/hide_message_count_hint"
            android:title="@string/hide_message_count_"/>

</PreferenceScreen>
