<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:key="notification_enable"
                        android:title="@string/notification_enable_"
                        android:summary="@string/notification_enable_hint"
                        android:defaultValue="true"/>
    <PreferenceScreen android:key="notification_icon"
                      android:title="@string/notification_icon_"
                      android:dependency="notification_enable"/>
    <RingtonePreference android:key="receive_sound"
                        android:title="@string/receive_sound_"
                        android:summary="@string/receive_sound_hint"
                        android:ringtoneType="notification"
                        android:defaultValue="@string/ringtone_defaultvalue"
                        android:dependency="notification_enable"/>
    <CheckBoxPreference android:key="receive_vibrate"
                        android:title="@string/receive_vibrate_"
                        android:summary="@string/receive_vibrate_hint"
                        android:dependency="notification_enable"/>
    <ListPreference android:key="receive_vibrate_mode"
                    android:title="@string/receive_vibrate_mode_"
                    android:entries="@array/vibrate_mode"
                    android:entryValues="@array/vibrate_mode_values"
                    android:dependency="receive_vibrate"/>
    <ListPreference android:key="receive_led_color"
                    android:title="@string/receive_led_color_" android:entries="@array/led_color"
                    android:entryValues="@array/led_color_values"
                    android:dependency="notification_enable"/>
    <ListPreference android:key="receive_led_flash"
                    android:title="@string/receive_led_flash_"
                    android:summary="@string/receive_led_flash_hint"
                    android:entries="@array/led_flash"
        android:entryValues="@array/led_flash_values"
                    android:dependency="notification_enable"/>
    <CheckBoxPreference android:key="receive_privacy"
                        android:title="@string/receive_no_text_"
                        android:summary="@string/receive_no_text_hint"
                        android:dependency="notification_enable"/>
    <CheckBoxPreference android:key="receive_popup"
        android:title="@string/receive_popup_"
        android:summary="@string/receive_popup_hint"
        android:dependency="notification_enable"/>

</PreferenceScreen>
