<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="show_target_app"
        android:summary="@string/show_target_app_hint"
        android:title="@string/show_target_app_" />
    <CheckBoxPreference
        android:key="decode_decimal_ncr"
        android:defaultValue="true" android:title="@string/decode_decimal_ncr_"
        android:summary="@string/decode_decimal_ncr_hint"/>
<!--    <CheckBoxPreference
        android:key="activate_sender"
        android:defaultValue="true" android:title="@string/activate_sender_"
        android:summary="@string/activate_sender_hint"/>-->
    <CheckBoxPreference
        android:key="mobile_only"
        android:title="@string/mobile_only_"
        android:summary="@string/mobile_only_hint"
        android:defaultValue="false"/>
<!--    <CheckBoxPreference
        android:key="edit_short_text"
        android:defaultValue="true"
        android:title="@string/edit_short_text_"
        android:summary="@string/edit_short_text_hint"/>-->
    <CheckBoxPreference
        android:key="forwarded_sms_clean"
        android:title="@string/forwarded_sms_clean_"
        android:summary="@string/forwarded_sms_clean_hint"
        android:defaultValue="false"/>

</PreferenceScreen>
