<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_contact"
        android:title="@string/view_contact_"
        app:actionLayout="@layout/contact"
        app:showAsAction="always"/>
    <item
        android:id="@+id/item_call"
        android:icon="@android:drawable/ic_menu_call"
        app:showAsAction="always"
        android:title="@string/call"/>
    <item
        android:id="@+id/item_delete_thread"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete_thread_"/>
    <item
        android:id="@+id/item_restore"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/restore_"/>
</menu>