<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header android:fragment="com.example.trantrungduong95.truesms.Presenter.HeaderPreferenceFragment"
            android:title="@string/appearance_">
        <extra android:name="resource" android:value="prefs_appearance"/>
    </header>
    <header android:fragment="com.example.trantrungduong95.truesms.Presenter.HeaderPreferenceFragment"
            android:title="@string/behavior_">
        <extra android:name="resource" android:value="prefs_behavior"/>
    </header>
    <header android:fragment="com.example.trantrungduong95.truesms.Presenter.HeaderPreferenceFragment"
            android:title="@string/notification_">
        <extra android:name="resource" android:value="prefs_notification"/>
    </header>
<!--    <header android:fragment="com.example.trantrungduong95.truesms.Presenter.HeaderPreferenceFragment"
            android:title="@string/about_">
        <extra android:name="resource" android:value="prefs_about"/>
    </header>-->
</preference-headers>