<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnChar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/charr" />
        <Button
            android:id="@+id/btnWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/word" />
        <Button
            android:id="@+id/btnPharse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pharse" />
    </LinearLayout>
    <ListView
        android:id="@+id/list_filter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:clipToPadding="false"
        android:divider="@null"
        android:paddingBottom="8sp"
        android:paddingTop="8sp"
        android:scrollbarStyle="outsideOverlay" />
    <!--    android:cacheColorHint="@color/transparent"-->
</LinearLayout>